# OpenSearch

./: CHANGELOG.md
gradle/: forbidden-dependencies.gradle  missing-javadoc.gradle  run.gradle
plugins/engine-datafusion/: build.gradle
plugins/engine-datafusion/jni/: Cargo.toml
plugins/engine-datafusion/jni/src/: lib.rs  util.rs
plugins/query-dsl-calcite/: README.md  build.gradle
plugins/query-dsl-calcite/src/main/resources/: plugin-descriptor.properties
plugins/query-execution-planner/: build.gradle
plugins/query-execution-planner/src/main/resources/: plugin-descriptor.properties
plugins/query-planner/: README.md  build.gradle
plugins/query-planner/jni/: .gitignore  Cargo.toml
plugins/query-planner/jni/.cargo/: config.toml
plugins/query-planner/jni/src/: lib.rs
plugins/query-planner/jni/test-data/: orders.parquet
plugins/query-planner/licenses/: arrow-NOTICE.txt
plugins/query-planner/src/main/resources/: plugin-descriptor.properties
sandbox/libs/analytics-framework/: build.gradle
sandbox/libs/data-format-spi/: build.gradle
sandbox/plugins/analytics-backend-datafusion/: build.gradle
sandbox/plugins/analytics-backend-datafusion/src/main/resources/: clickbench_hits_100.parquet  mock_data.parquet
sandbox/plugins/analytics-engine/: build.gradle
sandbox/plugins/parquet-data-format/: build.gradle
sandbox/qa/analytics-engine-rest/: README.md  build.gradle
server/src/main/java/org/opensearch/index/: IndexModule.java  IndexService.java
server/src/main/java/org/opensearch/indices/: IndicesService.java
(+453 files in other folders)
